# 2d-game-engine-playground

./: .gitignore  AI_CODE_GUIDELINES.md  ARCHITECTURE.md  ARCHITECTURE_VERIFIED.md  BOX2D_PHYSICS_INTEGRATION_PLAN.md  CMakeLists.txt  CMakePresets.json  CONTEXT_FILES_GUIDE.md  EVENT_SYSTEM_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_OVERVIEW.md  README.md  README_DOCUMENTATION.md  SCENE_ECS_CURRENT.md  SCRIPTING_IMPLEMENTATION_GUIDE.md  UI_PROGRESS.md  copilot-instructions.md  engine.json  structure.txt
.github/workflows/: ci.yml
Engine/: CMakeLists.txt  Engine.cpp  Engine.hpp
Engine/core/: Camera2D.cpp  Camera2D.hpp  EngineConfig.hpp  GLDebug.hpp  Log.hpp  Resources.cpp  Resources.hpp  Result.hpp  Timer.cpp  Timer.hpp  Window.cpp  Window.hpp
Engine/input/: Input.cpp  Input.hpp
Engine/renderer/: Renderer.cpp  Renderer.hpp  RendererCommand.hpp  Shader.cpp  Shader.hpp
EngineModules/: CMakeLists.txt
EngineModules/Core/: CMakeLists.txt
EngineModules/Physics/: CMakeLists.txt
EngineModules/Physics/include/sle/physics/: ContactListener.hpp  PhysicsTypes.hpp  PhysicsWorld.hpp
EngineModules/Physics/src/: ContactListener.cpp  PhysicsWorld.cpp
EngineModules/Platform/: CMakeLists.txt
EngineModules/Platform/include/sle/platform/: Input.hpp  Window.hpp
EngineModules/Platform/src/: Input.cpp  Window.cpp
EngineModules/Renderer/: CMakeLists.txt
EngineModules/Renderer/include/sle/renderer/: BatchKey.hpp  Camera2D.hpp  GLDebug.hpp  Renderer.hpp  RendererCommand.hpp  Shader.hpp  Texture.hpp  TextureRegion.hpp
EngineModules/Renderer/src/: Camera2D.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
EngineModules/Scripting/: CMakeLists.txt
EngineModules/Scripting/include/sle/scripting/: LuaBindings.hpp  ScriptApi.hpp  ScriptEngine.hpp  ScriptResource.hpp  ScriptRuntime.hpp
EngineModules/Scripting/src/: LuaBindings.cpp  LuaBindingsCamera.cpp  LuaBindingsCommon.hpp  LuaBindingsConstants.cpp  LuaBindingsEngine.cpp  LuaBindingsEvents.cpp  LuaBindingsInput.cpp  LuaBindingsInternal.hpp  LuaBindingsPhysics.cpp  ScriptEngine.cpp
EngineModules/Scripting/tools/: generate_lua_api_stub.py
EngineModules/Systems/: CMakeLists.txt
EngineModules/Systems/include/sle/engine/: AnimationSystem.hpp  AudioSystem.hpp  Context.hpp  PhysicsSystem.hpp  RenderSystem.hpp  Runtime.hpp  SceneLoader.hpp  SceneManager.hpp  ScriptApiImpl.hpp  ScriptSystem.hpp  StateMachineSystem.hpp  SystemContext.hpp  TransformSystem.hpp
EngineModules/Systems/src/: AnimationSystem.cpp  AudioSystem.cpp  PhysicsSystem.cpp  RenderSystem.cpp  Runtime.cpp  SceneLoader.cpp  SceneManager.cpp  ScriptApiImpl.cpp  ScriptSystem.cpp  StateMachineSystem.cpp  TransformSystem.cpp  ogg_decode.c  ogg_decode.h
EngineModules/UI/: CMakeLists.txt
EngineModules/UI/include/sle/ui/: UIBindingContext.hpp  UIDocument.hpp  UIElement.hpp  UIEvents.hpp  UIFrameContext.hpp  UILayoutParser.hpp  UIResources.hpp  UISystem.hpp  UIValue.hpp
EngineModules/UI/src/: UIBindingContext.cpp  UIDocument.cpp  UILayoutParser.cpp  UIResources.cpp  UISystem.cpp
Sandbox/: CMakeLists.txt  main.cpp
assets/scenes/: npc_zone_demo.json
cmake/: Dependencies.cmake
docs/: AGENT_ARCHITECTURE_CONTEXT.md  ARCHITECTURE.md  ARCHITECTURE_VERIFIED.md  BOX2D_PHYSICS_INTEGRATION_PLAN.md  CODEBASE_ARCHITECTURE_ANALYSIS.md  COMPONENT_SYSTEM_GUIDE.md  CONSTRAINTS.md  CURRENT_TASK.md  DOCS_MAINTENANCE.md  ENGINE_MASTER_PLAN.md  EVENT_SYSTEM_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_OVERVIEW.md  KNOWN_ISSUES.md  LUA_IMPLEMENTATION_QUICKSTART.md  OPTIMIZATIONS_CURRENT.md  PROJECT_MEMORY.md  README_DOCUMENTATION.md  RENDERING_CURRENT.md  SCRIPTING_CURRENT.md  UI_IMPLEMENTATION_PLAN.md  UI_PROGRESS.md  V1_FINAL_STAGE_PLAN.md
engine_app/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  README.md
examples/phase2_lua_events/: CMakeLists.txt  main.cpp
examples/phase2_lua_events/assets/scripts/: phase2_lua_events_sample.lua
examples/sandbox/: CMakeLists.txt  main.cpp
examples/sandbox/assets/scripts/: player_move.lua
examples/sandbox/assets/shaders/: debug.frag  debug.vert
examples/sandbox/assets/state_machines/: player_state_machine.json
examples/sandbox/assets/ui/: fps_hud.xml  world_label.xml
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/integration/events/: integration_events_edge_path.cpp  integration_events_happy_path.cpp  integration_events_physics_eventbus_swap_path.cpp  integration_events_scene_lifecycle_order_path.cpp  integration_events_scene_switch_coalescing_path.cpp  integration_events_scene_switch_invalid_path.cpp  integration_events_scene_teardown_path.cpp  integration_events_subscription_persistence_path.cpp
tests/integration/physics/: integration_physics_contact_deferred_dispatch_path.cpp  integration_physics_edge_path.cpp  integration_physics_happy_path.cpp  integration_physics_zone_enter_exit_path.cpp
tests/integration/renderer/: integration_renderer_edge_path.cpp  integration_renderer_happy_path.cpp
tests/integration/scripting/: integration_scripting_animator_api_surface_path.cpp  integration_scripting_audio_api_surface_path.cpp  integration_scripting_edge_path.cpp  integration_scripting_happy_path.cpp  integration_scripting_state_machine_api_surface_path.cpp
tests/integration/systems/: integration_animation_interpolation_binding_path.cpp  integration_animation_state_machine_clip_map_path.cpp  integration_animation_vec2_vec4_other_entity_path.cpp  integration_scene_loader_negative_path.cpp  integration_scene_loader_roundtrip_path.cpp  integration_state_machine_asset_definition_happy_path.cpp  integration_state_machine_happy_path.cpp  integration_state_machine_lua_guard_transition_path.cpp  integration_state_machine_script_callbacks_missing_edge_path.cpp  integration_state_machine_script_callbacks_path.cpp  integration_state_machine_timed_transition_path.cpp  integration_state_machine_transition_event_path.cpp
tests/integration/ui/: integration_ui_edge_path.cpp  integration_ui_happy_path.cpp  integration_ui_layout_features_path.cpp
tests/smoke/: CMakeLists.txt  smoke_harness_sentinel.cpp  smoke_runtime_sentinel.cpp
(+108 files in other folders)
